--- a/notebooks/CDQubit/CDQubit.Rmd
+++ b/notebooks/CDQubit/CDQubit.Rmd
@@ -30,9 +30,28 @@ import math
 import numpy as np
 import scipy.linalg as LA
 
+import matplotlib as mpl
 import matplotlib.pyplot as plt
 import context
 from qubitsim.qubit import ChargeDipole as cd
+```
+
+```{python}
+# Lines
+mpl.rcParams['lines.linewidth'] = 2
+
+# Border Surround
+mpl.rcParams['axes.linewidth'] = 2.0
+
+# Tick marks
+## X-ticks
+mpl.rcParams['xtick.direction'] = 'in'
+mpl.rcParams['xtick.major.size'] = 5.0
+mpl.rcParams['xtick.major.width'] = 2.0
+##Y-tics
+mpl.rcParams['ytick.direction'] = 'in'
+mpl.rcParams['xtick.major.size'] = 5.0
+mpl.rcParams['ytick.major.width'] = 2.0
 ```
 
 ## Qubit spectrum
@@ -83,9 +102,14 @@ pauli_vector = pauli_decomposition(coupling)
 
 ```{python}
 fig, ax = plt.subplots()
-for i in [1, 3]:
+for i in range(4):
     ax.plot(ed_array, pauli_vector[i])
 plt.show()
+```
+
+```{python}
+fig, ax = plt.subplots()
+ax.plot(ed_array, coupling[0, 1, :])
 ```
 
 ```{python}
